# GameOfLife-Curses

./: .gitignore  CMakeLists.txt  LICENSE  README.md  game_field.cpp  game_field.h  game_handler.cpp  game_handler.h  input_handler.cpp  input_handler.h  main.cpp  view_handler.cpp  view_handler.h
assignment4-tests/: mockViewHandler.cpp  testCommandReset  testCommandReset.cpp  testCommandSaveLoad.cpp  testCommandSet.cpp  testCountLife.cpp  testSetCellAt.cpp  test_field_cells.cpp
tests/: test_game_field.cpp  test_game_handler.cpp  test_input_handler.cpp
